examples/valid/single_chararacter_secret_reference.reqlang
```%config
secrets = ["a"]
```

```%request
GET https://example.com/{{!a}} HTTP/1.1
```
