examples/invalid/undefined_in_envs.reqlang
```%config
[[vars]]
name = "foo"
```


```%request
GET https://example.com/{{:foo}} HTTP/1.1

```
